--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -35,9 +35,9 @@
             </header>
 
             <footer>
-                <strong>Rio de janeiro</strong>
+                <strong>Búzios</strong>
 
-                <p>Rio das Ostras</p>
+                <p>Rio de Janeiro</p>
             </footer>
         </aside>
 
