--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -20,7 +20,7 @@
                 <img class="animate-up" id="logo" src="/images/logo.svg" alt="Logomarca de Happy">
 
                 <div class="location animate-up">
-                    <strong>Rio das Ostras</strong>
+                    <strong>Búzios</strong>
                     <p>Rio de Janeiro</p>
                 </div>
             </header>
