--- a/src/views/orphanages.hbs
+++ b/src/views/orphanages.hbs
@@ -25,6 +25,10 @@
 
 <body>
 
+
+
+
+    </footer>
     <div id="page-orphanages">
         <aside class="animate-right">
             <header>
@@ -56,7 +60,10 @@
             <img src="/images/plus.svg" alt="Criar orfanato">
         </a>
 
+
     </div>
+
+
 
     <script src="/scripts/page-orphanages.js"></script>
 </body>
